// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/app/demo/basic.tsx extend context correctly 1`] = `
<div
  class="g-app css-var-test-id"
>
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    style="flex-wrap: wrap;"
  >
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Open message
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Open modal
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Open notification
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/app/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/app/demo/config.tsx extend context correctly 1`] = `
<div
  class="g-app css-var-test-id"
>
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    style="flex-wrap: wrap;"
  >
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Message for only one
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Notification for bottomLeft
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/app/demo/config.tsx extend context correctly 2`] = `[]`;
